Update AUTHORS file (add woollybah)

--- a/AUTHORS
+++ b/AUTHORS
@@ -83,6 +83,7 @@ Brian Burton <bburton@users.sourceforge.net>
 Brian D. Carlstrom <bdc@clark.lcs.mit.edu>
 Brian F. Dennis <xjam@cork.cs.berkeley.edu>
 Brian Lewis <btlewis@eng.sun.com>
+Bruce A Henderson <woollybah@gmail.com>
 Bruce Hoult <bruce@hoult.org>
 Bruce Mitchener <bruce.mitchener@gmail.com>
 Bruno Haible <bruno@clisp.org>
