--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,126 @@
+2018-07-11  Ivan Maidanski <ivmai@mail.ru>
+
+	* ptr_chck.c (GC_is_valid_displacement): Remove redundant
+	IS_FORWARDING_ADDR_OR_NIL(hhdr) call if GC_all_interior_pointers.
+	* ptr_chck.c (GC_is_valid_displacement): Do not goto fail if
+	p+sz-offset > h+1 but IS_FORWARDING_ADDR_OR_NIL(HDR(h+1)).
+	* ptr_chck.c (GC_is_visible): Transform comment about GC_base to
+	a TODO item; set hhdr to HDR(base) instead of HDR(p)
+	if HBLKPTR(base)!=HBLKPTR(p).
+
+2018-06-15  Ivan Maidanski <ivmai@mail.ru>
+
+	* include/private/gc_pmark.h [MARK_BIT_PER_OBJ] (PUSH_CONTENTS_HDR):
+	Do not call LONG_MULT() if inv_sz == LARGE_INV_SZ; set base to
+	hhdr->hb_block if inv_sz == LARGE_INV_SZ regardless of low_prod>>16
+	value; use EXPECT(FALSE) for inv_sz == LARGE_INV_SZ expression;
+	remove FIXME about offset; adjust assertion to allow hb_block==current.
+
+2018-01-15  Ivan Maidanski <ivmai@mail.ru>
+
+	* gc_cpp.cc [!_MSC_VER && __cplusplus>201103L] (operator delete):
+	Define sized variant (the size argument is ignored for now).
+	* gc_cpp.cc [!_MSC_VER && __cplusplus>201103L && GC_OPERATOR_NEW_ARRAY
+	&& !CPPCHECK] (operator delete[]): Likewise.
+
+2018-07-12  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README.win32: Rename "Borland 4.5" to "Borland C++ Builder".
+	* doc/README.win32 (Borland Tools): Change version from 4.5 to 5.5.
+
+2018-07-11  Ivan Maidanski <ivmai@mail.ru>
+
+	* os_dep.c [NEED_CALLINFO && LINUX && !SMALL_CONFIG]
+	(GC_print_callers): If nl is null then pass result_len (instead of
+	nl-result_buf) to strncmp; adjust code indentation.
+
+2018-05-08  Ivan Maidanski <ivmai@mail.ru>
+
+	* include/gc_inline.h (GC_CONS): Store second element only if result
+	is non-null; store first element along with second one.
+
+2018-06-23  Ivan Maidanski <ivmai@mail.ru>
+
+	* mark.c (GC_push_selected): In case of a danger of mark stack overflow
+	after the first GC_push_all() call then call GC_push_all(bottom, top)
+	and return; remove redundant checking of GC_mark_stack_top at the end
+	of the function (overflow is already checked in GC_push_all).
+
+2018-06-20  Ivan Maidanski <ivmai@mail.ru>
+
+	* os_dep.c [!REDIRECT_MALLOC && USE_WINALLOC]
+	(GC_add_current_malloc_heap): Do not call GC_get_allocation_base(new_l)
+	if new_l is null; cast malloc() result to the type of new_l.
+
+2018-06-14  Ivan Maidanski <ivmai@mail.ru>
+
+	* allchblk.c [MARK_BIT_PER_OBJ] (setup_header): Fix comment
+	(sz*inv_sz>=2**32).
+	* allchblk.c [MARK_BIT_PER_OBJ && INV_SZ_COMPUTATION_CHECK]
+	(setup_header): Add assertion to check the computation of inv_sz.
+
+2018-06-14  Ivan Maidanski <ivmai@mail.ru>
+
+	* reclaim.c [!USE_MARK_BYTES] (GC_n_set_marks): Do not decrement the
+	result variable on return; add comment.
+
+2018-05-18  Ivan Maidanski <ivmai@mail.ru>
+
+	* Makefile.am (EXTRA_DIST,
+	include doc/doc.am): Change comment style from "#" to "##".
+	* Makefile.am (CPLUSPLUS): Move "#" inside the conditional block.
+	* configure.ac: Update the copyright.
+	* configure.ac: Change comment style from "#" to "dnl" for the comments
+	that are meaningless in auto-generated configure file.
+
+2018-05-07  Ivan Maidanski <ivmai@mail.ru>
+
+	* dyn_load.c [USE_PROC_FOR_LIBRARIES] (GC_register_map_entries): Call
+	GC_remove_roots_subregion for each region which has prot starting
+	with "---"; add comment.
+	* include/private/gc_priv.h [USE_PROC_FOR_LIBRARIES]
+	(GC_remove_roots_subregion): Declare function.
+	* mark_rts.c [USE_PROC_FOR_LIBRARIES] (GC_remove_roots_subregion):
+	Implement (including partial overlapping).
+
+2018-06-15  Ivan Maidanski <ivmai@mail.ru>
+
+	* ChangeLog: Fix typos ("sections",
+	"variable", "determining", "config", "initialize").
+	* doc/README.changes: Fix typos ("getting", "pointerful", "configure").
+
+2018-06-01  Ivan Maidanski <ivmai@mail.ru>
+
+	* include/gc_allocator.h (GC_selective_alloc<GC_true_type>): Do not
+	define if __WATCOMC__; add comment.
+
+2018-05-31  Ivan Maidanski <ivmai@mail.ru>
+
+	* include/private/gcconfig.h [!_WIN32_WCE && !__CEGCC__
+	&& !__MINGW32CE__] (MSWIN32): Do not define if already
+	defined.
+
+2018-05-23  Ivan Maidanski <ivmai@mail.ru>
+
+	* include/ec.h (CORD_ec_flush_buf): Fix a typo ("cord") in comment.
+
+2018-05-15  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/gcinterface.html: Change GC_set_warn_proc return type from
+	GC_warn_proc to void.
+
+2018-05-02  Naoyuki Sawa <sawa_naoyuki-1@yahoo.co.jp>
+
+	* dyn_load.c [MSWIN32 || MSWINCE || CYGWIN32]
+	(GC_register_dynamic_libraries): Call GC_cond_add_roots()
+	also for PAGE_EXECUTE_WRITECOPY and PAGE_WRITECOPY pages.
+
+2018-04-25  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/doc.am (dist_doc_DATA): Remove doc/gc.man.
+	* doc/doc.am (dist_man3_MANS): Set to doc/gc.man.
+	* doc/gc.man (.TH): Rename GC_MALLOC to BDWGC.
+
 [7.2k]
 
 2018-04-19  Ivan Maidanski <ivmai@mail.ru>
