Update copyright information in the documentation and gc.h files
* AUTHORS: Add info about the maintainer.
* README.QUICK: Update header copyright (add Ivan Maidanski).
* include/gc.h: Likewise.
* README.md (Copyright & Warranty): Update copyright (add the
missing copyrights from the source code files).
* doc/gc.man (.TH): Update modification date.
* doc/gc.man (.SH AUTHOR): Update; add reference to AUTHORS file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,8 @@ This is an attempt to acknowledge contributions to the garbage collector.
 Early contributions also mentioned (duplicated) in ChangeLog file; details of
 later ones should be in "git log".
 
+Currently maintained by Ivan Maidanski.
+
 HISTORY -
 
   Early versions of this collector were developed as a part of research
