--- a/AUTHORS
+++ b/AUTHORS
@@ -212,6 +212,7 @@ John Clements <clements@brinkerhoff.org>
 John Ellis <ellis@xerox.parc.com>
 John Merryweather Cooper <jmerry@mono-cvs.ximian.com>
 Jon Moore <jonm@apache.org>
+Jonas Echterhoff <jonas@unity3d.com>
 Jonathan Bachrach <jonathan@harlequin.com>
 Jonathan Chambers <jonathan@unity3d.com>
 Jonathan Clark
