Update AUTHORS file (add Michael DeRoy)

--- a/AUTHORS
+++ b/AUTHORS
@@ -274,6 +274,7 @@ Maurizio Vairani <maurizio.vairani@cloverinformatica.it>
 Max Mouratov <mmouratov@gmail.com>
 Melissa O'Neill <oneill@cs.sfu.ca>
 Michael Arnoldus <chime@proinf.dk>
+Michael DeRoy <deroymichael@gmail.com>
 Michael Fox <mfox@cavium.com>
 Michael Smith <msmith@spinnakernet.com>
 Michael Spertus <mps@geodesic.com>
