--- a/AUTHORS
+++ b/AUTHORS
@@ -217,6 +217,7 @@ Jonathan Bachrach <jonathan@harlequin.com>
 Jonathan Chambers <jonathan@unity3d.com>
 Jonathan Clark
 Jonathan Pryor <jpryor@novell.com>
+Josh Peterson <petersonjm1@gmail.com>
 Joshua Richardson <jric@chegg.com>
 Juan Jose Garcia-Ripoll <juanjose.garciaripoll@googlemail.com>
 Kai Tietz <ktietz70@googlemail.com>
