--- a/AUTHORS
+++ b/AUTHORS
@@ -220,6 +220,7 @@ Jonathan Bachrach <jonathan@harlequin.com>
 Jonathan Chambers <jonathan@unity3d.com>
 Jonathan Clark
 Jonathan Pryor <jpryor@novell.com>
+Josh Peterson <petersonjm1@gmail.com>
 Joshua Richardson <jric@chegg.com>
 Juan Jose Garcia-Ripoll <juanjose.garciaripoll@googlemail.com>
 Jukka Jylanki <jujjyl@gmail.com>
