Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -266,6 +266,7 @@ Mark Reichert <markr@sirs.com>
 Mark Sibly
 Mark Weiser <weiser@ubiq.com>
 Martin Hirzel <hirzel@cs.colorado.edu>
+Martin Koeppe <mkoeppe@gmx.de>
 Martin Tauchmann <martintauchmann@bigfoot.com>
 Matt Austern <austern@google.com>
 Matthew Flatt <mflatt@plt-scheme.org>
