Update AUTHORS file (add Demyan Kimitsa)

--- a/AUTHORS
+++ b/AUTHORS
@@ -122,6 +122,7 @@ David Pickens <dsp@rci.rutgers.edu>
 David Stes <stes@d5e02b1d.kabel.telenet.be>
 David Van Horn <dvanhorn@ccs.neu.edu>
 Davide Angelocola <davide.angelocola@tiscali.it>
+Demyan Kimitsa <demyan.kimitsa@gmail.com>
 Dick Porter <dick@acm.org>
 Dietmar Planitzer <dave.pl@ping.at>
 Dimitris Vyzovitis <vyzo@media.mit.edu>
