--- a/AUTHORS
+++ b/AUTHORS
@@ -129,6 +129,7 @@ David Stes <stes@d5e02b1d.kabel.telenet.be>
 David Terei <d@davidterei.com>
 David Van Horn <dvanhorn@ccs.neu.edu>
 Davide Angelocola <davide.angelocola@tiscali.it>
+Demyan Kimitsa <demyan.kimitsa@gmail.com>
 Dick Porter <dick@acm.org>
 Dietmar Planitzer <dave.pl@ping.at>
 Dimitris Vyzovitis <vyzo@media.mit.edu>
