--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,33 @@
+2018-09-13  Ivan Maidanski <ivmai@mail.ru>
+
+	* CMakeLists.txt (CMAKE_USE_PTHREADS_INIT): Fix typo
+	("lib and includes") in comment.
+
+2018-09-03  Max Mouratov <mmouratov@gmail.com>
+
+	* doc/README.changes (5.0alpha6): Fix typo ("DATASTART").
+	* include/private/gcconfig.h: Likewise.
+	* backgraph.c: Fix typo in comment ("If").
+	* cord/de.c: Fix typo in comment ("Unbounded").
+
+2018-08-28  Demyan Kimitsa <demyan.kimitsa@gmail.com>
+
+	* darwin_stop_world.c (struct GC_mach_thread): Rename already_suspended
+	field to suspended.
+	* darwin_stop_world.c [!GC_NO_THREADS_DISCOVERY]
+	(GC_suspend_thread_list): Add my_task argument; remove info an outCount
+	local variables; call mach_port_deallocate unless threaded is added to
+	GC_mach_threads; do not call thread_info; update the relevant comments.
+	* darwin_stop_world.c [!GC_NO_THREADS_DISCOVERY] (GC_stop_world):
+	Remove i local variable; do not call mach_port_deallocate for prevlist
+	items; add comment.
+	* darwin_stop_world.c (GC_thread_resume): Call WARN instead of ABORT
+	if thread_resume failed.
+	* darwin_stop_world.c [!GC_NO_THREADS_DISCOVERY] (GC_start_world):
+	Initialize j to listcount; iterate over GC_mach_threads in the outer
+	loop; if thread is suspended then find it in act_list; if found then
+	resume thread; call mach_port_deallocate for act_list items.
+
 [7.2l]
 
 2018-08-10  Ivan Maidanski <ivmai@mail.ru>
