Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -403,6 +403,7 @@ Walter Bright <walter@walterbright.com>
 Walter Underwood <wunder@hp-ses.sde.hp.com>
 Wilson Ho <how@ivy.ucdavis.edu>
 Wink Saville <wink@saville.com>
+Wookey <wookey@wookware.org>
 Xi Wang <xi.wang@gmail.com>
 Xiaokun Zhu <xiaokun@aero.gla.ac.uk>
 Yann Dirson <dirson@debian.org>
