Update AUTHORS file (add Fabrice Fontaine)

--- a/AUTHORS
+++ b/AUTHORS
@@ -146,6 +146,7 @@ Eric Benson <eb@kaleida.com>
 Eric Holk <eric.holk@gmail.com>
 Erik M. Bray <erik.bray@lri.fr>
 Fabian Thylman
+Fabrice Fontaine <fontaine.fabrice@gmail.com>
 Fergus Henderson <fjh@cs.mu.oz.au>
 Franklin Chen <chen@adi.com>
 Fred Gilham <gilham@csl.sri.com>
