--- a/ChangeLog
+++ b/ChangeLog
@@ -234,19 +234,38 @@
 
 == [7.6.10] (not released yet) ==
 
+* Add paths to filenames mentioned in the copyright section in README
 * Call real pthread_sigmask instead of its wrapper in start_mark_threads
+* Eliminate 'casting signed to bigger unsigned int' CSA warning
+* Eliminate 'non-virtual destructor for class with inheritors' CSA warning
+* Fix 'collecting from unknown thread' abort in leak-finding mode for Win32
+* Fix 'too wide non-owner permissions are set for resource' code defect
 * Fix 'undefined reference to GC_incremental' linker error in pthread_start
+* Fix GC_VSNPRINTF in cordprnt for DJGPP and MS VC for WinCE
+* Fix GC_register_disclaim_proc for leak-finding mode
+* Fix a deadlock in write_fault_handler if AO_or is emulated
 * Fix comment typos in CMakeLists.txt, backgraph.c, de.c, gcconfig.h
 * Fix concurrent bitmap update in GC_dirty
 * Fix delete operator redirection if gc_cpp is built as .dll (Cygwin, MinGW)
-* Fix GC_VSNPRINTF in cordprnt for DJGPP and MS VC for WinCE
+* Fix hbp overflow in GC_install_counts
+* Fix linkage with a system libatomic_ops shared library
+* Fix lock assertion violation in get_index if GC_ALWAYS_MULTITHREADED
 * Fix marking of finalizer closure object
+* Fix marks and hb_n_marks consistency when disclaim returns true
 * Fix memory allocation on GCF (Linux/x64)
 * Fix missing curses.h in cord/de when compiling manually (MS VC, MinGW)
 * Fix start_world not resuming all threads on Darwin
+* Fix test_cpp assertion violation in find-leak mode
+* Fix tests linkage with internal atomic_ops.o
 * Fix unneeded end_stubborn_change in disclaim_test
+* Guard against potential buffer overflow in CORD_next and CORD_pos_fetch
+* New macro to suppress printing of leaked objects
+* Prevent double inclusion of javaxfc.h and private/specific.h
+* Reduce scope of local variables in GC_remove_all_threads_but_me
+* Refine HIDE_POINTER documentation for the case of the leak-finding mode
 * Refine documentation in gc_disclaim.h
 * Test marking of finalizer closure object in disclaim_test
+* Update documentation about arm64 ABI in gcconfig.h
 * Use AO_or in async_set_pht_entry_from_index if available
 * Use include gc.h with the angle brackets in the man page synopsis
 
